tests/k8s_testcases/network-policy-checks-bad-path/matchexpressions_values_no_match_with_operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matchexpressions-values-test1
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
        # non-empty values with operator DoesNotExist/Exists
      - key: tier
        operator: Exists
        values:
          - helm
  policyTypes:
    - Ingress
    - Egress
